# cqrs-demo

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20230105125856_create_users_table.sql
src/: main.rs
src/infra/: deps.rs  mod.rs  state.rs  uuid.rs
src/user/: mod.rs
src/user/domain/: mod.rs  repositories.rs
src/user/domain/entities/: mod.rs
src/user/domain/presentation/: controllers.rs
src/user/infra/: repositories.rs
